# Camera-For-Linux-In-Rust

./: Cargo.toml  README.md  build.rs  camera-app.desktop  install.sh  install_deps.sh
src/: camera.rs  main.rs  power.rs
ui/: camera.slint
